--- a/machines.xml.dist
+++ b/machines.xml.dist
@@ -17,7 +17,7 @@
 		</driver>
 	</machine>
 	<!-- Cupcake prototype description -->
-	<machine>
+  <machine>
 		<name>Cupcake CNC</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
@@ -163,4 +163,34 @@ M18
 M18
 		</cooldown>
 	</machine>
+  <!-- CupCake with camera attached -->
+  <machine experimental="1">
+		<name>EXPERIMENTAL - Cupcake CNC w/HBP and remote camera</name>
+		<geometry type="cartesian">
+			<!-- different pulleys on X and Y axii -->
+			<axis id="x" length="300" maxfeedrate="5000" scale="11.767463"/> 
+			<axis id="y" length="300" maxfeedrate="5000" scale="11.767463"/>
+			<axis id="z" length="300" maxfeedrate="150" scale="320"/>
+		</geometry>
+		<tools>
+			<tool name="Pinch Wheel Extruder v1.1" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true" heatedplatform="true" camera="true"/>
+		</tools>
+		<clamps></clamps>
+		<driver name="sanguino3g">
+			<!-- optional, defaults to first serial port found.    <portname>COM1</portname> -->
+			<!-- required: we need 8 bit and 38400 baud. -->
+			<rate>38400</rate>
+			<parity>8</parity>
+			<!-- optional, defaults to 1.                          <databits>1</databits> -->
+			<!-- optional, defaults to N.                          <stopbits>N</stopbits> -->
+			<debuglevel>0</debuglevel>
+		</driver>
+		<warmup>
+		</warmup>
+		<cooldown>
+(Turn off steppers after a build.)
+M18
+		</cooldown>
+	</machine>
+	<!-- Cupcake prototype description -->
 </machines>
